--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
   "name": "cashfree-backend",
   "version": "1.0.0",
-  "description": "Backend for generating Cashfree payment session tokens.",
+  "description": "Backend for generating Cashfree payment session tokens and automatic payment verification",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "dependencies": {
     "express": "^4.18.2",
     "axios": "^1.6.7",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 } 
